# chrome-perf-reader

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/analysis/: detached.rs  diff.rs  dominator.rs  mod.rs  retainers.rs  summary.rs
src/lighthouse/: mod.rs  parser.rs
src/parser/: graph.rs  mod.rs  raw.rs
src/report/: markdown.rs  mod.rs  text.rs
src/trace/: frames.rs  gc.rs  hotspots.rs  mod.rs  parser.rs  summary.rs
