[package]
name = "chrome-perf-reader"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "chrome-perf-reader"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
humansize = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
